src/tui/snapshots/zizq__tui__ui__tests__render_connected_with_server_info.snap
---
source: src/tui/ui.rs
expression: "render_to_string(&app, 60, 10)"
---
┌Zizq 0.1.0────────────────────────────────────────────────┐
│ ● Connected  v1.0.0  uptime: 1.1m                        │
└──────────────────────────────────────────────────────────┘
 Ready   In-Flight
       ID   PRIORITY QUEUE TYPE      DELAY          ATTEMPTS




 h/l Switch tab  q Quit
