src/tui/snapshots/zizq__tui__ui__tests__render_connecting.snap
---
source: src/tui/ui.rs
expression: "render_to_string(&app, 60, 10)"
---
┌Zizq 0.1.0────────────────────────────────────────────────┐
│ ● Connecting...                                          │
└──────────────────────────────────────────────────────────┘
 Ready   In-Flight
       ID   PRIORITY QUEUE TYPE      DELAY          ATTEMPTS




 h/l Switch tab  q Quit
