src/tui/snapshots/zizq__tui__ui__tests__render_disconnected.snap
---
source: src/tui/ui.rs
expression: "render_to_string(&app, 60, 10)"
---
┌Zizq 0.1.0────────────────────────────────────────────────┐
│ ● Disconnected                                           │
└──────────────────────────────────────────────────────────┘
┌Ready───────────────────────┐┌In-Flight───────────────────┐
│ID  Pr Queue Type   Since At││ID  Pr Queue Type   Since At│
│                            ││                            │
│                            ││                            │
│                            ││                            │
│                            ││                            │
└────────────────────────────┘└────────────────────────────┘
