src/tui/snapshots/zizq__tui__ui__tests__render_disconnected_wide.snap
---
source: src/tui/ui.rs
expression: "render_to_string(&app, 120, 8)"
---
┌Zizq 0.1.0────────────────────────────────────────────────────────────────────────────────────────────────────────────┐
│ ● Disconnected                                                                                                       │
└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘
 Ready   In-Flight
                             ID   PRIORITY QUEUE                 TYPE                            DELAY          ATTEMPTS


 h/l Switch tab  q Quit
