src/tui/snapshots/zizq__tui__ui__tests__render_panes_on_disconnect.snap
---
source: src/tui/ui.rs
expression: "render_to_string(&app, 120, 8)"
---
┌Zizq 0.1.0────────────────────────────────────────────────────────────────────────────────────────────────────────────┐
│ ● Disconnected                                                                                                       │
└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘
┌Ready─────────────────────────────────────────────────────┐┌In-Flight─────────────────────────────────────────────────┐
│ID          Pri  Queue       Type         Since      Att  ││ID          Pri  Queue       Type         Since      Att  │
│                                                          ││                                                          │
│                                                          ││                                                          │
└──────────────────────────────────────────────────────────┘└──────────────────────────────────────────────────────────┘
