src/tui/snapshots/zizq__tui__ui__tests__render_ready_tab_with_jobs.snap
---
source: src/tui/ui.rs
expression: "render_to_string(&app, 120, 12)"
---
┌Zizq 0.1.0────────────────────────────────────────────────────────────────────────────────────────────────────────────┐
│ ● Connected  v1.0.0  uptime: 2.0m                                                                                    │
└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘
 Ready   In-Flight
                             ID   PRIORITY QUEUE                 TYPE                            DELAY          ATTEMPTS
          job-emails-send_email          0 emails                send_email                      5.2s                  0
         job-reports-gen_report          0 reports               gen_report                      1.0m                  2




 h/l Switch tab  q Quit
