src/tui/snapshots/zizq__tui__ui__tests__render_scheduled_tab_with_jobs.snap
---
source: src/tui/ui.rs
expression: "render_to_string(&app, 120, 12)"
---
  Zizq 0.1.0
● Connected 127.0.0.1:8901
  Server version: 1.0.0, Uptime: 2m
  Queue: 0 in-flight, 0 ready

  Depth[                                                                                                       0 jobs]

   Ready   In-Flight   Scheduled
                             ID   PRIORITY QUEUE                          DUE   ATTEMPTS TYPE
          job-emails-send_email          0 emails                       3m52s          0 send_email
         job-reports-gen_report          0 reports                         1h          1 gen_report
 ←/→ Switch tab  q Quit
